# directory-scanner-cleaner

./: .gitignore
build-directory-scanner-cleaner-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/: appdirectory-scanner-cleaner_qmltyperegistrations.cpp
build-directory-scanner-cleaner-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/.rcc/qmlcache/: appdirectory-scanner-cleaner_main_qml.cpp  appdirectory-scanner-cleaner_qmlcache_loader.cpp
build-directory-scanner-cleaner-Desktop_Qt_6_3_0_MinGW_64_bit-Debug/directory-scanner-cleaner/: qmldir
demo_app/: CMakeLists.txt  demo_app.pro  filemanager.cpp  filemanager.h  filemanagercontroller.cpp  filemanagercontroller.h  filemanagermodel.cpp  filemanagermodel.h  filetreeelement.cpp  filetreeelement.h  main.cpp  main.qml
directory-scanner-cleaner/: CMakeLists.txt  filemanagercontroller.cpp  filesystemcontroller.cpp  filesystemcontroller.h  filesystemmanager.cpp  filesystemmanager.h  filesystemmodel.cpp  filesystemmodel.h  filetreeelement.cpp  filetreeelement.h  main.cpp  main.qml  warningmessage.qml
directory-scanner-cleaner/controllers/: filesystemcontroller.cpp  filesystemcontroller.h  mainwindowcontroller.cpp  mainwindowcontroller.h  settingscontroller.cpp  settingscontroller.h  settingswindowcontroller.cpp  settingswindowcontroller.h
directory-scanner-cleaner/log/: filesDeletionHistory.json
directory-scanner-cleaner/models/: deletionreasonsstringmodel.cpp  deletionreasonsstringmodel.h  filesystemmodel.cpp  filesystemmodel.h  filetreeelement.cpp  filetreeelement.h
directory-scanner-cleaner/sources/: configfilehandler.cpp  configfilehandler.h  deletionhistoryhandler.cpp  deletionhistoryhandler.h  filesystemmanager.h  main.cpp
directory-scanner-cleaner/tools/: configfilehandler.cpp  configfilehandler.h  filesdeletionhistorymanager.cpp  filesdeletionhistorymanager.h  filesystemmanager.cpp  filesystemmanager.h  filetreereversebreadthiterator.cpp  filetreereversebreadthiterator.h
directory-scanner-cleaner/views/: main.qml  settingswindow.qml  warningmessage.qml
